<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <!-- HKD.TIC -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="491sp"
        android:layout_height="738sp"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="-3dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/hkd_tic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125sp"
        android:layout_marginTop="71sp"
        android:layout_marginEnd="120sp"
        android:text="@string/hkd_tic"
        android:textAppearance="@style/hkd_tic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <View
        android:id="@+id/amblem"
        android:layout_width="114dp"
        android:layout_height="115.73dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="167dp"
        android:background="@drawable/amblem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hkd_tic" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/login"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amblem"
        android:background="@drawable/edit_text_bg">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#00000000"
            android:drawableStart="@drawable/ic_user1"
            android:drawablePadding="8sp"
            android:hint="@string/e_mail"
            android:padding="5sp"
            android:textColor="#E6000000"
            android:textColorHint="#FF606162"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/pass"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login">


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#00000000"
            android:drawableStart="@drawable/ic_lock1"
            android:drawablePadding="8sp"
            android:hint="@string/password"
            android:background="@drawable/transparentbg"
            android:padding="5sp"
            android:textColor="#E6000000"
            android:textColorHint="#FF606162"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Giriş butonu -->

    <Button
        android:id="@+id/btn_giris_yap"
        android:layout_width="170sp"
        android:layout_height="50sp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="119dp"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/btn_sifremi_unuttum"
        android:layout_width="137dp"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/transparentbg"
        android:text="@string/forget_pass"
        android:textColor="@color/forget_pass"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_giris_yap"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="36dp"
        android:text="@string/signHereText"
        android:textColor="@color/SignUpText"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_uye_ol"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sifremi_unuttum" />

    <Button
        android:id="@+id/btn_uye_ol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/transparentbg"
        android:text="@string/signHereButton"
        android:textColor="@color/SignUpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sifremi_unuttum" />


</androidx.constraintlayout.widget.ConstraintLayout>