<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="180dp"
        android:layout_height="225dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        app:cardBackgroundColor="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btn_add_card"
            android:layout_width="134dp"
            android:layout_height="26dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="196dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/add_card"
            android:text="@string/add_card"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/img_product_list"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="99dp"
            android:background="@drawable/product_photo_radius"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_product_list_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="126dp"
            android:layout_marginEnd="18dp"
            android:text="@string/product_name"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="160dp"
            android:layout_height="27dp"
            android:layout_marginTop="168dp">

            <TextView
                android:id="@+id/txt_product_price"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="4dp"
                android:gravity="top"
                android:text="@string/product_price"
                android:textAppearance="@style/product_price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="4dp"
                android:gravity="top"
                android:text="@string/product_currency"
                android:textAppearance="@style/product_currency"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_product_price"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
