<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="491sp"
        android:layout_height="738sp"
        android:layout_marginStart="-25dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="-25dp"
        android:layout_marginBottom="-25dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/amblem"
        android:layout_width="105dp"
        android:layout_height="106dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="167dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/amblem" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/name_space"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="222dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amblem">

        <EditText
            android:id="@+id/name_SignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#00000000"
            android:drawableStart="@drawable/ic_log_in"
            android:drawablePadding="8sp"
            android:autofillHints="no"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="5sp"
            android:textColor="#E6000000"
            android:textColorHint="#FF606162"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/surname_space"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="278dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_space">

        <EditText
            android:id="@+id/surname_SignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#00000000"
            android:drawableStart="@drawable/ic_log_in"
            android:drawablePadding="8sp"
            android:hint="@string/surname"
            android:inputType="text"
            android:autofillHints="no"
            android:padding="5sp"
            android:textColor="#E6000000"
            android:textColorHint="#FF606162"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/phoneNumber_space"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="334dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_space">

        <EditText
            android:id="@+id/phoneNumber_SignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#00000000"
            android:drawableStart="@drawable/ic_log_in"
            android:drawablePadding="8sp"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="5sp"
            android:textColor="#E6000000"
            android:textColorHint="#FF606162"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/e_mail_space"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="390dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber_space">

        <EditText
            android:id="@+id/e_mail_SignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#00000000"
            android:drawableStart="@drawable/ic_user1"
            android:drawablePadding="8sp"
            android:hint="@string/e_mail"
            android:autofillHints="no"
            android:inputType="text"
            android:padding="5sp"
            android:textColor="#E6000000"
            android:textColorHint="#FF606162"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/password_space"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="446dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_mail_space">

        <EditText
            android:id="@+id/password_SignUp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:backgroundTint="#00000000"
            android:drawableStart="@drawable/ic_lock1"
            android:drawablePadding="8sp"
            android:hint="@string/password"
            android:autofillHints="no"
            android:inputType="text"
            android:padding="5sp"
            android:textColor="#E6000000"
            android:textColorHint="#FF606162"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_kayit_ol"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="515dp"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="122dp"
        android:background="@drawable/button_bg"
        android:text="@string/signUp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_space" />

</RelativeLayout>